fixed container width on mobile version for iPhone 6/7/8

--- a/#src/scss/parts/_vars.sass
+++ b/#src/scss/parts/_vars.sass
@@ -54,4 +54,4 @@ $media-xl: 1200px
 $media-lg: 992px
 $media-md: 768px
 $media-sm: 576px
-$media-xs: 375px
+$media-xs: 374px
